<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:bind="http://schemas.android.com/apk/res/android">

    <data>



    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_page_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/sign_in"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:paddingTop="35dp"
                android:paddingBottom="35dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_user_white"
                        android:background="@color/buttonColor"/>

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:background="@android:color/white"
                        android:hint="@string/hint_username"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_pwd_white"
                        android:background="@color/buttonColor"/>

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:background="@android:color/white"
                        android:hint="@string/hint_password"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/buttonColor"
                    android:paddingRight="50dp"
                    android:paddingLeft="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/login_button"/>

                <TextView
                    android:id="@+id/tvFrgtPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:text="@string/forgot_your_password"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>